--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -1,26 +1,16 @@
 {
-  "dependencies": {
-    "ejs": "^3.1.7",
-    "express": "^4.17.3",
-    "nodemon": "^2.0.16",
-    "to": "^0.2.9",
-    "update": "^0.7.4"
-  },
-  "name": "grupo_5_proyecto",
-  "description": "Vive Bio se dedica a la comercialización de productos de higiene personal, de origen natural, orgánicos, biodegradables y veganos. Los productos que ofrece al mercado entre sus variedades son: jabones, esponjas, sahumos, shampoo y acondicionador.\r Mercado: el consumidor ideal, es aquél interesado en conocer alternativas naturales para su cuidado personal. \r Cómo nos acomodamos al mercado: los productos que ofrece la empresa garantizan, desde su producción hasta todos sus componentes, ser beneficiosos para la salud sin tener impacto negativo en el medio ambiente.",
-  "version": "1.0.0",
-  "main": "./src/app.js",
+  "name": "grupo-5-vive-bio",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DiCerso/grupo_5_proyecto.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DiCerso/grupo_5_proyecto/issues"
-  },
-  "homepage": "https://github.com/DiCerso/grupo_5_proyecto#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
+  }
 }
