--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "ejs": "^3.1.7",
     "express": "^4.17.3",
+    "method-override": "^3.0.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.16",
     "to": "^0.2.9",
     "update": "^0.4.2"
