--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -14,6 +14,6 @@
   "version": "1.0.0",
   "main": "./src/app.js",
   "scripts": {
-    "start": "node ./src/bin/www"
+    "start": "node ./src/app.js"
   }
 }
