--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -16,5 +16,8 @@
   "main": "./src/app.js",
   "scripts": {
     "start": "node ./src/app.js"
+  },
+  "nodemonConfig": {
+    "ignore": "src/data/*.json"
   }
 }
