--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
@@ -18,7 +19,9 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.16"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
+    "sequelize": "^6.21.0"
   },
   "nodemonConfig": {
     "ignore": "src/data/*.json"
