--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -18,7 +18,9 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.16"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
+    "sequelize": "^6.21.2"
   },
   "nodemonConfig": {
     "ignore": "src/data/*.json"
