--- a/site_ViveBio/.env
+++ b/site_ViveBio/.env
@@ -1,7 +1,8 @@
 DB_USERNAME=root
 DB_PASSWORD=root
-DB_DATABASE=db-vivebio
+DB_DATABASE=scriptvivebio
 DB_PORT=3306
 DB_HOST=127.0.0.1
 
 PORT=3030
+NODE_ENV=development
