--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -20,6 +20,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
     "sequelize": "^6.21.0"
   },
