--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-DB_USERNAME= "root"
-DB_PASSWORD= "root"
-DB_DATABASE= vivebio_db
-DB_PORT= 3306
-DB_HOST= 127.0.0.1
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_DATABASE=vivebio_db
+DB_PORT=3306
+DB_HOST=127.0.0.1
 
-PORT= 3030
+
+PORT=3030
