--- a/site_ViveBio/package.json
+++ b/site_ViveBio/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "sequelize": "^6.21.0"
   },
